test/parsetest/valid/assign_to_expr.java
class Invalid8 {

	public static void main(String[] args) {
		/* doesn't make sense, but allowed by language spec */
		a + 1 = a + 2;
	}

}
