test/parsetest/invalid/missing-array-initializer.java
class Some {
  public static void main(String[] args) {
    SomeValue[] val = new SomeValue[];
  }
}


